--- a/public_html/css/minta.css
+++ b/public_html/css/minta.css
@@ -19,6 +19,15 @@ body{
     border-radius: 0px 0px 10px 0px;
 }
 
+.test{
+    border: 1px solid red;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    width: 80%;
+    text-align: center;
+    color: white;
+}
 #nyeremeny{
     height: 500px;
     float:left;
@@ -38,7 +47,7 @@ body{
     width: 180px;
     background-color: rgba(5,5,5,0.8);
     border-radius: 30px;
-    height: 400px;
+    height: 500px;
 }
 
 #nyeremenyBlokk{
@@ -49,7 +58,7 @@ body{
     height: 400px;
 }
 
-.valaszok{
+#valaszok{
     height: 200px;
     width: 560px;
     background-color: rgba(5,5,5,0.8);
@@ -59,7 +68,7 @@ body{
     text-align: center;
 }
 
-.valaszok p{
+#valaszok p{
     padding-top: 6px;
 }
 
@@ -72,6 +81,15 @@ body{
     color: #FFFFFF;
     text-align: center;
     font-size: 18px;
+}
+
+#ujra{
+    height: 100px;
+    width: 100px;
+    background-color: #C0C0C0;
+    border-radius: 10px;
+    margin: 0 auto;
+    margin-top: 70px;
 }
 
 .valasz{
@@ -110,7 +128,7 @@ body{
     }
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 630px){
     .valasz{
         width: 100%;
     }
