--- a/public_html/css/minta.css
+++ b/public_html/css/minta.css
@@ -27,7 +27,27 @@ body{
     width: 80%;
     text-align: center;
     color: white;
+    padding-top: 5px;
+    box-sizing: border-box;
 }
+
+.penz{
+    border: 1px solid red;
+    height: 30px;
+    margin: 0 auto;
+    margin-top: 15px;
+    width: 80%;
+    text-align: center;
+    color: white;
+    padding-top: 5px;
+    box-sizing: border-box;
+}
+
+#vegeSzoveg{
+    color: white;
+    font-size: 18px;
+}
+
 #nyeremeny{
     height: 500px;
     float:left;
@@ -47,7 +67,7 @@ body{
     width: 180px;
     background-color: rgba(5,5,5,0.8);
     border-radius: 30px;
-    height: 500px;
+    height: 470px;
 }
 
 #nyeremenyBlokk{
@@ -55,7 +75,7 @@ body{
     width: 180px;
     background-color: rgba(5,5,5,0.8);
     border-radius: 30px;
-    height: 400px;
+    height: 470px;
 }
 
 #valaszok{
@@ -90,6 +110,8 @@ body{
     border-radius: 10px;
     margin: 0 auto;
     margin-top: 70px;
+    padding-top: 40px;
+    box-sizing: border-box;
 }
 
 .valasz{
@@ -98,13 +120,15 @@ body{
     float: left;
     margin-bottom: 40px;
     background-color: #C0C0C0;
+    padding-top: 19px;
+    box-sizing: border-box;
 }
 
 @media only screen and (max-width: 1100px){
     #nyeremeny{
         display: none;
     }
-    .valaszok{
+    #valaszok{
         float: left;
     }
     #main{
@@ -116,7 +140,7 @@ body{
     #helyzet{
         display: none;
     }
-    .valaszok{
+    #valaszok{
         width: 87%;
         margin-right: 0px;
     }
@@ -132,7 +156,7 @@ body{
     .valasz{
         width: 100%;
     }
-    .valaszok{
+    #valaszok{
         height: 410px;
     }
     #elso{
